chore: improve test logging and structure using JUnit 5 extensions